--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,8 +9,7 @@
             "program": "afb-binder",
             "env": {
                 "LD_LIBRARY_PATH": "/usr/local/lib64",
-                "IFACE_PEV": "lo",
-                "IFACE_EVSE": "lo",
+                "IFACE_SIMU": "simu-veth",
                 "PKI_TLS_DIR": "etc/"
             },
             "args": [
@@ -33,8 +32,7 @@
             "program": "afb-binder",
             "env": {
                 "LD_LIBRARY_PATH": "/usr/local/lib64",
-                "IFACE_PEV": "lo",
-                "IFACE_EVSE": "lo",
+                "IFACE_SIMU": "simu-veth",
                 "PKI_TLS_DIR": "etc/"
             },
             "args": [
