--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "html.format.wrapLineLength": 140,
     "rust-analyzer.showUnlinkedFileNotification": false,
     "cSpell.words": [
+        "conjustion",
         "evse",
         "rcode"
     ]
