--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "env": {
                 "LD_LIBRARY_PATH": "/usr/local/lib64",
                 "IFACE_SIMU": "simu-veth",
-                "PKI_TLS_DIR": "etc/"
+                "PKI_TLS_DIR": "../iso15118-binding-rs/afb-test/certs"
             },
             "args": [
                 "-v",
@@ -25,17 +25,19 @@
             ]
         },
                 {
-            "name": "pcap-2",
+            "name": "pcap-tls-1.3",
             "type": "lldb",
             "preLaunchTask": "binding-native-build",
             "request": "launch",
             "program": "${env:HOME}/.cargo/build/debug/pcap-iso15118",
             "env": {
-                "LD_LIBRARY_PATH": "/usr/local/lib64",
+                "LD_LIBRARY_PATH": "/usr/local/lib64:/usr/local/lib",
             },
             "args": [
-                "--pcapfile=./iso15118-pcap/samples/ABB-Normal.pcapng",
+                "--pcapfile=../iso15118-binding-rs/afb-test/trace-logs/hello-tls-1.3.pcapng",
+                "--psklog=../iso15118-binding-rs/afb-test/trace-logs/hello-tls-1.3.keylog",
                 "--tcpport=53537",
+                "--verbose=1",
                 "--logfile=/tmp/iso15118-scenario.json",
             ],
             "cwd": "${workspaceFolder}",
@@ -46,6 +48,3 @@
         },
     ]
 }
-
-~/.cargo/build/debug/pcap-scenario --tcpport=53537 --pcapfile= ./iso15118-pcap/samples/ABB-Normal.pcapng  --logfile=/tmp/scenario.js
-on
