--- a/binding-15118-2/etc/binding-iso2.yaml
+++ b/binding-15118-2/etc/binding-iso2.yaml
@@ -13,12 +13,12 @@ binding:
     # ip6_prefix:  0         # default 0xFE80
     # sdp_port:    15118     # default 15118
     tls:
-      trust: ${PKI_TLS_DIR}/_trialog/
-      certs: ${PKI_TLS_DIR}/_trialog/secc-chain.pem
-      key: ${PKI_TLS_DIR}/_trialog/secc20Cert.key
-      pin: 123456
+      # note client root of trust should be visible from server 'certs_trust' directory
+      certs: ${PKI_TLS_DIR}/_client.pem
+      key: ${PKI_TLS_DIR}/_client.key.pem
+      format: der #default pem
       proto: SECURE128:-VERS-SSL3.0:-VERS-TLS1.0:-ARCFOUR-128:+PSK:+DHE-PSK
-      psk_log: /tmp/tls-keys-simu.log
+      psk_log: /tmp/tls-keys-client.log
     verbs:
       - session_setup_req
       - service_discovery_req
