--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,7 +24,7 @@
                 "settings set target.disable-aslr false"
             ]
         },
-                {
+        {
             "name": "pcap-tls-1.3",
             "type": "lldb",
             "preLaunchTask": "binding-native-build",
@@ -36,7 +36,26 @@
             "args": [
                 "--pcapfile=../iso15118-binding-rs/afb-test/trace-logs/hello-tls-1.3.pcapng",
                 "--psklog=../iso15118-binding-rs/afb-test/trace-logs/hello-tls-1.3.keylog",
-                "--tcpport=53537",
+                "--verbose=1",
+                "--logfile=/tmp/iso15118-scenario.json",
+            ],
+            "cwd": "${workspaceFolder}",
+            "initCommands": [
+                "target stop-hook add -n _start -o continue",
+                "settings set target.disable-aslr false"
+            ]
+        },
+                {
+            "name": "pcap-din",
+            "type": "lldb",
+            "preLaunchTask": "binding-native-build",
+            "request": "launch",
+            "program": "${env:HOME}/.cargo/build/debug/pcap-iso15118",
+            "env": {
+                "LD_LIBRARY_PATH": "/usr/local/lib64:/usr/local/lib",
+            },
+            "args": [
+                "--pcapfile=./iso15118-pcap/trace-logs/ABB-Normal.pcapng",
                 "--verbose=1",
                 "--logfile=/tmp/iso15118-scenario.json",
             ],
