--- a/iso15118-jsonc/Cargo.toml
+++ b/iso15118-jsonc/Cargo.toml
@@ -11,8 +11,12 @@ afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", 
 serde = { version = "1.0", features = ["derive"] }
 serde_json={ version= "1.0"}
 base64={ version= "0.22"}
-iso15118= {path ="../../iso15118-encoders-rs"}
-nettls= {path ="../../iso15118-network-rs"}
+nettls= {path ="../../iso15118-network-rs", default-features = false, optional = true}
+iso15118= {path ="../../iso15118-encoders-rs", default-features = false, optional = true}
+
+[features]
+default = ["iso15118", "nettls"]
+afbv4 = ["dep:afbv4","iso15118","iso15118/afbv4","nettls","nettls/afbv4"]
 
 [lib]
 name = "iso15118_jsonc"
