--- a/afb-binding/Cargo.toml
+++ b/afb-binding/Cargo.toml
@@ -11,7 +11,7 @@ afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", 
 serde = { version = "1.0", features = ["derive"] }
 serde_json={ version= "1.0"}
 base64={ version= "0.22"}
-iso15118_jsonc= {path ="../iso15118-jsonc"}
+iso15118_jsonc= {path ="../jsonc-15118"}
 nettls= {path ="../../iso15118-network-rs"}
 iso15118= {path ="../../iso15118-encoders-rs", default-features = false, optional = true}
 
