--- a/afb-evse/Cargo.toml
+++ b/afb-evse/Cargo.toml
@@ -7,12 +7,15 @@ publish = false
 build = "etc/build.rs"
 
 [dependencies]
-afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", optional = true}
+#uncomment the "afbv4" line if you want to use "afbv4" as an external dependencies (for development purpose.)
+# You can activate this external dependency with the feature "afbv4" like :"cargo build --features afbv4"
+#afbv4 = { git = "https://github.com/redpesk-common/afb-librust", optional = true }
+iso15118 = { git ="https://github.com/tux-evse/iso15118-encoders-rs.git", branch = "sandbox/ronan/fixdep"}
+nettls =   { git ="https://github.com/tux-evse/iso15118-network-rs.git",  branch = "sandbox/ronan/fixdep"}
+
 serde = { version = "1.0", features = ["derive"] }
 serde_json={ version= "1.0"}
-iso15118= {path ="../../iso15118-encoders-rs"}
 iso15118_jsonc = {path ="../jsonc-15118"}
-nettls= {path ="../../iso15118-network-rs"}
 
 [lib]
 name = "afb_sim15118_evse"
