--- a/pcap-15118/Cargo.toml
+++ b/pcap-15118/Cargo.toml
@@ -12,13 +12,15 @@ afbmock=[]
 
 
 [dependencies]
-afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", optional = true}
+#uncomment the "afbv4" line if you want to use "afbv4" as an external dependencies (for development purpose.)
+# You can activate this external dependency with the feature "afbv4" like :"cargo build --features afbv4"
+#afbv4 = { git = "https://github.com/redpesk-common/afb-librust", optional = true }
+iso15118 = { git ="https://github.com/tux-evse/iso15118-encoders-rs.git", branch = "sandbox/ronan/fixdep"}
 iso15118_jsonc = {path ="../jsonc-15118"}
-iso15118= {path ="../../iso15118-encoders-rs"}
 
 [build-dependencies]
 bindgen    = ">=0.6"
-system-deps = "2.0"
+system-deps = "7.0.1"
 cc = "1"
 
 [package.metadata.system-deps]
