--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,9 @@
                 "CARGO_BINDING_DIR": "${env:CARGO_TARGET_DIR}debug",
                 "LD_LIBRARY_PATH": "/usr/local/lib64",
                 "IFACE_SIMU": "lo",
-                "PKI_TLS_DIR": "./afb-test/certs"
+                "PKI_TLS_DIR": "./afb-test/certs",
+                "SIMULATION_MODE": "responder",
+
             },
             "args": [
                 "-v",
@@ -26,7 +28,7 @@
             ]
         },
         {
-            "name": "pev-simu15118",
+            "name": "evcc-simu15118",
             "type": "lldb",
             "preLaunchTask": "binding-native-build",
             "request": "launch",
@@ -36,13 +38,14 @@
                 "LD_LIBRARY_PATH": "/usr/local/lib64",
                 "IFACE_SIMU": "lo",
                 "PKI_TLS_DIR": "./afb-test/certs",
+                "SIMULATION_MODE": "injector",
             },
             "args": [
                 "-v",
                 "--monitoring",
                 "--trap-faults=0",
-                "--config=afb-pev/etc/binding-simu15118-pev.yaml",
-                "--config=afb-test/etc/audi-dc-iso2.json",
+                "--config=afb-evcc/etc/binding-simu15118-evcc.yaml",
+                //"--config=afb-test/etc/audi-dc-iso2.json",
             ],
             "cwd": "${workspaceFolder}",
             "initCommands": [
