--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "env": {
                 "CARGO_BINDING_DIR": "${env:CARGO_TARGET_DIR}debug",
                 "LD_LIBRARY_PATH": "/usr/local/lib64",
-                "IFACE_SIMU": "lo",
+                "IFACE_SIMU": "evse-veth",
                 "PKI_TLS_DIR": "./afb-test/certs",
                 "SIMULATION_MODE": "responder",
 
@@ -20,6 +20,7 @@
                 "--monitoring",
                 "--trap-faults=0",
                 "--config=afb-evse/etc/binding-simu15118-evse.yaml",
+                "--config=afb-test/etc/small-dc-iso2.json"
             ],
             "cwd": "${workspaceFolder}",
             "initCommands": [
@@ -36,7 +37,7 @@
             "env": {
                 "CARGO_BINDING_DIR": "${env:CARGO_TARGET_DIR}debug",
                 "LD_LIBRARY_PATH": "/usr/local/lib64",
-                "IFACE_SIMU": "lo",
+                "IFACE_SIMU": "evcc-veth",
                 "PKI_TLS_DIR": "./afb-test/certs",
                 "SIMULATION_MODE": "injector",
             },
@@ -45,7 +46,7 @@
                 "--monitoring",
                 "--trap-faults=0",
                 "--config=afb-evcc/etc/binding-simu15118-evcc.yaml",
-                //"--config=afb-test/etc/audi-dc-iso2.json",
+                "--config=afb-test/etc/small-dc-iso2.json",
             ],
             "cwd": "${workspaceFolder}",
             "initCommands": [
