--- a/afb-evcc/Cargo.toml
+++ b/afb-evcc/Cargo.toml
@@ -7,7 +7,6 @@ publish = false
 build = "etc/build.rs"
 
 [dependencies]
-afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", optional = true}
 serde = { version = "1.0", features = ["derive"] }
 serde_json={ version= "1.0"}
 iso15118_jsonc= {path ="../jsonc-15118"}
@@ -16,9 +15,9 @@ iso15118= {path ="../../iso15118-encoders-rs", default-features = false, optiona
 
 [features]
 default = ["iso15118","iso15118/default"]
-afbv4 = ["iso15118","iso15118/afbv4", "dep:afbv4"]
+#afbv4 = ["iso15118","iso15118/afbv4", "dep:afbv4"]
 
 [lib]
-name = "afb_sim15118_pev"
+name = "afb_sim15118_evcc"
 crate-type = ["cdylib"]
 path = "src/libso.rs"
