fix --compact mode

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -55,6 +55,32 @@
             ]
         },
         {
+            "name": "evcc-compact-15118",
+            "type": "lldb",
+            "preLaunchTask": "binding-native-build",
+            "request": "launch",
+            "program": "afb-binder",
+            "env": {
+                "CARGO_BINDING_DIR": "${env:CARGO_TARGET_DIR}debug",
+                "LD_LIBRARY_PATH": "/usr/local/lib64",
+                "IFACE_SIMU": "evcc-veth",
+                "PKI_TLS_DIR": "./afb-test/certs",
+                "SIMULATION_MODE": "injector",
+            },
+            "args": [
+                "-v",
+                "--monitoring",
+                "--trap-faults=0",
+                "--config=afb-evcc/etc/binding-simu15118-evcc.yaml",
+                "--config=afb-test/etc/compact-dc-iso2.json",
+            ],
+            "cwd": "${workspaceFolder}",
+            "initCommands": [
+                "target stop-hook add -n _start -o continue",
+                "settings set target.disable-aslr false"
+            ]
+        },
+        {
             "name": "pcap-tls-1.3",
             "type": "lldb",
             "preLaunchTask": "binding-native-build",
