Update dep to upstream git repo

--- a/afb-evcc/Cargo.toml
+++ b/afb-evcc/Cargo.toml
@@ -11,8 +11,8 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json={ version= "1.0"}
 iso15118_jsonc= {path ="../jsonc-15118"}
 iso15118_exi = {path = "../exi-15118"}
-nettls= {path ="../../iso15118-network-rs"}
-iso15118= {path ="../../iso15118-encoders-rs", default-features = false, optional = true}
+nettls= {git= "https://github.com/tux-evse/iso15118-network-rs.git", branch="main"}
+iso15118= {git= "https://github.com/tux-evse/iso15118-encoders-rs.git", branch="main", default-features = false, optional = true}
 
 [features]
 default = ["iso15118","iso15118/default"]
