--- a/jsonc-15118/Cargo.toml
+++ b/jsonc-15118/Cargo.toml
@@ -10,7 +10,7 @@ build = "etc/build.rs"
 serde = { version = "1.0", features = ["derive"] }
 serde_json={ version= "1.0"}
 nettls= {path ="../../iso15118-network-rs", default-features = false, optional = true}
-iso15118= {path ="../../iso15118-encoders-rs", default-features = false, optional = true}
+iso15118= {git= "https://github.com/tux-evse/iso15118-encoders-rs.git", branch="main", default-features = false, optional = true}
 
 [features]
 default = ["iso15118", "nettls"]
