--- a/pcap-15118/Cargo.toml
+++ b/pcap-15118/Cargo.toml
@@ -13,7 +13,7 @@ afbmock=[]
 
 [dependencies]
 iso15118_jsonc = {path ="../jsonc-15118"}
-iso15118= {path ="../../iso15118-encoders-rs"}
+iso15118= {git= "https://github.com/tux-evse/iso15118-encoders-rs.git", branch="main"}
 
 [build-dependencies]
 bindgen    = ">=0.6"
