--- a/jsonc-15118/Cargo.toml
+++ b/jsonc-15118/Cargo.toml
@@ -9,7 +9,7 @@ build = "etc/build.rs"
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json={ version= "1.0"}
-nettls= {path ="../../iso15118-network-rs", default-features = false, optional = true}
+nettls= {git= "https://github.com/tux-evse/iso15118-network-rs.git", branch="main", default-features = false, optional = true}
 iso15118= {git= "https://github.com/tux-evse/iso15118-encoders-rs.git", branch="main", default-features = false, optional = true}
 
 [features]
