--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "evse-small-15118",
+            "name": "evse-compact-15118",
             "type": "lldb",
             "preLaunchTask": "binding-native-build",
             "request": "launch",
@@ -13,40 +13,14 @@
                 "IFACE_SIMU": "evse-veth",
                 "PKI_TLS_DIR": "./afb-test/certs",
                 "SIMULATION_MODE": "responder",
-                "SCENARIO_UID": "small-dc-iso2",
+                "SCENARIO_UID": "compact-dc-iso2",
             },
             "args": [
                 "-vv",
                 "--monitoring",
                 "--trap-faults=0",
                 "--config=afb-evse/etc/binding-simu15118-evse.yaml",
-                "--config=afb-test/etc/small-dc-iso2.json"
-            ],
-            "cwd": "${workspaceFolder}",
-            "initCommands": [
-                "target stop-hook add -n _start -o continue",
-                "settings set target.disable-aslr false"
-            ]
-        },
-        {
-            "name": "evcc-small-15118",
-            "type": "lldb",
-            "preLaunchTask": "binding-native-build",
-            "request": "launch",
-            "program": "afb-binder",
-            "env": {
-                "CARGO_BINDING_DIR": "${env:CARGO_TARGET_DIR}debug",
-                "LD_LIBRARY_PATH": "/usr/local/lib64",
-                "IFACE_SIMU": "evcc-veth",
-                "PKI_TLS_DIR": "./afb-test/certs",
-                "SIMULATION_MODE": "injector",
-            },
-            "args": [
-                "-v",
-                "--monitoring",
-                "--trap-faults=0",
-                "--config=afb-evcc/etc/binding-simu15118-evcc.yaml",
-                "--config=afb-test/etc/small-dc-iso2.json",
+                "--config=afb-test/etc/compact-dc-iso2.json"
             ],
             "cwd": "${workspaceFolder}",
             "initCommands": [
@@ -73,6 +47,32 @@
                 "--trap-faults=0",
                 "--config=afb-evcc/etc/binding-simu15118-evcc.yaml",
                 "--config=afb-test/etc/compact-dc-iso2.json",
+            ],
+            "cwd": "${workspaceFolder}",
+            "initCommands": [
+                "target stop-hook add -n _start -o continue",
+                "settings set target.disable-aslr false"
+            ]
+        },
+        {
+            "name": "evcc-full-15118",
+            "type": "lldb",
+            "preLaunchTask": "binding-native-build",
+            "request": "launch",
+            "program": "afb-binder",
+            "env": {
+                "CARGO_BINDING_DIR": "${env:CARGO_TARGET_DIR}debug",
+                "LD_LIBRARY_PATH": "/usr/local/lib64",
+                "IFACE_SIMU": "evcc-veth",
+                "PKI_TLS_DIR": "./afb-test/certs",
+                "SIMULATION_MODE": "injector",
+            },
+            "args": [
+                "-v",
+                "--monitoring",
+                "--trap-faults=0",
+                "--config=afb-evcc/etc/binding-simu15118-evcc.yaml",
+                "--config=afb-test/etc/audi-dc-iso2.json",
             ],
             "cwd": "${workspaceFolder}",
             "initCommands": [
